https://github.com/markrogoyski/itertools-php
https://laravel-news.com/laravel-content-security-policies
https://medium.com/studocu-techblog/you-might-not-need-a-repository-in-laravel-3-alternatives-c241638a3922
https://php.watch/articles/extend-lifetime-legacy-php
https://tomasvotruba.com/blog/good-bye-monorepo/
https://localheinz.com/articles/2023/02/22/documenting-the-system-under-test-in-phpunit/
https://blog.remirepo.net/post/2022/11/29/PHP-7.4-is-retired#comments
https://laracasts.com/series/whats-new-in-laravel-10
https://benjamincrozat.com/laravel-10-upgrade-guide
https://beyondco.de/blog/laravel-10-new-process-facade/
https://github.com/laravel/pennant
https://phpunit.de/announcements/phpunit-10.html
https://github.com/php-fig/per-coding-style/blob/master/spec.md
https://thephp.foundation/blog/2023/01/30/php-core-roundup-9/
https://wiki.php.net/rfc/readonly_amendments
https://wiki.php.net/rfc/typed_class_constants


########################################################
build from Scratch
########################################################

https://maheshsamudra.medium.com/creating-a-simple-php-mvc-framework-from-scratch-7158f12340a0
https://symfony.com/doc/current/create_framework/index.html
https://symfony.com/doc/current/introduction/from_flat_php_to_symfony.html

########################################################
PHP 8.4: new features and release date
########################################################

https://benjamincrozat.com/php-84
https://benjamincrozat.com/php-90
https://wiki.php.net/rfc/deprecations_php_8_1
https://wiki.php.net/rfc/deprecations_php_8_2
https://wiki.php.net/rfc/deprecations_php_8_3
https://wiki.php.net/rfc/deprecations_php_8_4


https://www.php.net/manual/en/appendices.php
https://www.php.net/manual/en/migration80.new-features.php
https://www.php.net/releases/8.0/en.php
https://php.watch/versions
https://phptherightway.com/

https://roadrunner.dev/
https://openswoole.com/how-it-works
https://reactphp.org/