@@ -1,0 +1,4 @@
+
+
+run_app:
+	python3 app.py
