@@ -1,0 +1,4 @@
+### run app
+~~~sh
+python3 app.py
+~~~
