@@ -1,0 +1,127 @@
+https://copilot.microsoft.com/chats/
+
+You are a senior Python developer  with expertise in backend applications.
+
+## Project Context Requirements
+- Tkinter (App )
+- SqLite (Database)
+
+## Development Standards
+### Architecture
+- App with simple form
+- Database storing data
+
+Think through how you would build it step by step.
+
+Then, respond with the complete spec as a well-organized markdown file.
+
+#################################
+Generated output
+#################################
+
+
+
+Sure thing! Here's a step-by-step plan to build a simple Python desktop app using **Tkinter** for the UI and **SQLite** as the backend database:
+
+---
+
+### 🧱 Step 1: Set Up the Project Structure
+
+Create a folder for your project and organize it like this:
+
+```
+my_app/
+├── app.py
+├── database.py
+└── requirements.txt
+```
+
+This keeps code modular and clean.
+
+---
+
+### 💡 Step 2: Design the Tkinter Form (`app.py`)
+
+Build a simple form with fields like name, email, or whatever data you need.
+
+```python
+import tkinter as tk
+from database import insert_data
+
+def submit_form():
+    name = entry_name.get()
+    email = entry_email.get()
+    insert_data(name, email)
+    entry_name.delete(0, tk.END)
+    entry_email.delete(0, tk.END)
+
+root = tk.Tk()
+root.title("Simple Form")
+
+tk.Label(root, text="Name").pack()
+entry_name = tk.Entry(root)
+entry_name.pack()
+
+tk.Label(root, text="Email").pack()
+entry_email = tk.Entry(root)
+entry_email.pack()
+
+tk.Button(root, text="Submit", command=submit_form).pack()
+
+root.mainloop()
+```
+
+---
+
+### 🗃️ Step 3: Configure the SQLite Database (`database.py`)
+
+Create a lightweight SQLite database to store form data.
+
+```python
+import sqlite3
+
+def connect_db():
+    conn = sqlite3.connect('data.db')
+    cursor = conn.cursor()
+    cursor.execute('''
+        CREATE TABLE IF NOT EXISTS users (
+            id INTEGER PRIMARY KEY AUTOINCREMENT,
+            name TEXT NOT NULL,
+            email TEXT NOT NULL
+        )
+    ''')
+    conn.commit()
+    conn.close()
+
+def insert_data(name, email):
+    conn = sqlite3.connect('data.db')
+    cursor = conn.cursor()
+    cursor.execute('INSERT INTO users (name, email) VALUES (?, ?)', (name, email))
+    conn.commit()
+    conn.close()
+
+connect_db()  # Run this once when the app starts
+```
+
+---
+
+### 🧪 Step 4: Test the Application
+
+Run `app.py` and try entering some test data. Verify that it's saved in `data.db`.
+
+You can inspect the DB using a tool like **DB Browser for SQLite** or query it with Python.
+
+---
+
+### 📦 Step 5: Package Your App
+
+Once it works, package it:
+- Add dependencies in `requirements.txt` (usually just `tkinter`—built-in, and `sqlite3`)
+- Use `pyinstaller` to convert it into an executable if needed:
+  ```
+  pyinstaller --onefile app.py
+  ```
+
+---
+
+Would you like me to help add more features like input validation, update/delete functions, or even a data viewer inside the app? I’d be happy to level it up!
