@@ -1,0 +1,22 @@
+https://pythonexamples.org/python-tkinter-entry-set-width/
+https://www.geeksforgeeks.org/python/how-to-resize-an-entry-box-by-height-in-tkinter/
+https://www.tutorialspoint.com/how-to-set-the-width-of-a-tkinter-entry-widget-in-pixels
+https://www.tutorialspoint.com/python/tk_entry.htm
+https://www.geeksforgeeks.org/python/python-tkinter-entry-widget/
+https://python-course.eu/tkinter/entry-widgets-in-tkinter.php
+https://python-course.eu/tkinter/entry-widgets-in-tkinter.php
+
+
+TEXT type - SQLite support very long text (I don't know exact number but I tested 33000 char SQLite3)
+
+https://stackoverflow.com/questions/9755803/whats-the-best-sqlite-data-type-for-a-long-string
+https://www.sqlite.org/datatype3.html
+https://www.geeksforgeeks.org/sqlite/sqlite-text-vs-varchar/
+https://www.sqlite.org/limits.html
+
+
+https://code.visualstudio.com/docs/copilot/copilot-customization
+https://copilot-instructions.md/
+
+
+
