@@ -53,3 +53,5 @@ https://phptherightway.com/
 https://roadrunner.dev/
 https://openswoole.com/how-it-works
 https://reactphp.org/
+
+https://amitmerchant.com/everything-that-is-coming-in-php-85/
